# gong

./: .gitignore  CMakeLists.txt  Makefile  TODO.txt
include/: CMakeLists.txt  Makefile
include/gong/: Makefile
include/gong/AST/: ASTContext.h  ASTDiagnostic.h  BuiltinTypes.def  Decl.h  DeclBase.h  DeclContextInternals.h  DeclNodes.def  Expr.h  ExprNodes.def  PromotedFields.h  Stmt.h  StmtNodes.def  Type.h  TypeNodes.def  UnresolvedSet.h
include/gong/Basic/: Diagnostic.h  DiagnosticIDs.h  DiagnosticLexKinds.def  DiagnosticOptions.def  DiagnosticOptions.h  IdentifierTable.h  LLVM.h  OperatorPrecedence.h  SourceLocation.h  SourceManager.h  Specifiers.h  TokenKinds.def  TokenKinds.h
include/gong/Frontend/: DiagnosticRenderer.h  TextDiagnostic.h  TextDiagnosticBuffer.h  TextDiagnosticPrinter.h  VerifyDiagnosticConsumer.h
include/gong/Lex/: Lexer.h  Token.h
include/gong/Parse/: Action.h  IdentifierList.h  Ownership.h  Parser.h  Scope.h
include/gong/Sema/: IdentifierResolver.h  Lookup.h  Sema.h
lib/: Makefile
lib/AST/: ASTContext.cpp  ASTDiagnostic.cpp  CMakeLists.txt  Decl.cpp  DeclBase.cpp  Expr.cpp  Makefile  PromotedFields.cpp  Stmt.cpp  Type.cpp  TypePrinter.cpp
lib/Basic/: CMakeLists.txt  ConvertUTF.c  ConvertUTFWrapper.cpp  Diagnostic.cpp  DiagnosticIDs.cpp  IdentifierTable.cpp  Makefile  OperatorPrecedence.cpp  SourceLocation.cpp  TokenKinds.cpp
lib/Frontend/: CMakeLists.txt  DiagnosticRenderer.cpp  Makefile  TextDiagnostic.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticPrinter.cpp  VerifyDiagnosticConsumer.cpp
lib/Lex/: CMakeLists.txt  Lexer.cpp  Makefile
lib/Lex/utf/: CMakeLists.txt  Makefile  utf.h
lib/Parse/: CMakeLists.txt  Makefile  MinimalAction.cpp  ParseExpr.cpp  ParseStmt.cpp  Parser.cpp  RAIIObjectsForParser.h
lib/Sema/: CMakeLists.txt  IdentifierResolver.cpp  Makefile  Sema.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaExprMember.cpp  SemaLookup.cpp  SemaStmt.cpp
test/: CMakeLists.txt  Makefile  lit.cfg  lit.site.cfg.in
test/Driver/: inputs.go
test/Frontend/: verify-empty-fails.go  verify-empty-succeeds-with-token.go  verify-malformed.go  verify.go
test/Lexer/: comments.go  conflict-marker.go  eof-comment-null.go  eof-comment.go  eof-file.go  eof-rune.go  eof-string.go  invalid-utf.go  invalid-whitespace.go  null-characters.go  semicolon-insertion.go  tokens-comments.go  tokens-identifiers.go  tokens-keywords.go  tokens-numeric-literals.go  tokens-punctuators.go  tokens-runes-strings.go  verify-errors.go
test/Parser/: ambiguous-typelit-brace.go  declaration.go  expr.go  fixit-while.go  func.go  gobug4501.go  import.go  package-name-empty.go  package-name-missing.go  package-semicolon.go  package.go  prefix-incdec.go  stmt.go  type.go  typelit.go
test/Sema/: assignment.go  constspec.go  crash-init-idents.go  crash.go  decls.go  func.go  lookup.go  scopes.go  selector.go  shortvardecl.go  struct.go  typespec.go  varspec.go
tools/: Makefile
tools/driver/: CMakeLists.txt  Makefile  driver.cpp
